-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.15.0
-
None
While investigating why QtRemoteObjects is not handling disconnections with a External IODevice - I saw this line in qconnectionfactories.cpp (line 237):
I believe the test should be != -1 to indicate that the disconnected SIGNAL exists?
For Gerrit Dashboard: QTBUG-84640 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
337930,2 | ExternalIODevice fixes | dev | qt/qtremoteobjects | Status: MERGED | +2 | 0 |
338023,2 | ExternalIODevice fixes | 5.12 | qt/qtremoteobjects | Status: MERGED | +2 | 0 |
338024,2 | ExternalIODevice fixes | tqtc/lts-5.15 | qt/tqtc-qtremoteobjects | Status: MERGED | +2 | 0 |