ExternalIODevice fixes

Make sure the input QIODevice is valid and the disconnect signal (if
available) is connected.

Task-number: QTBUG-84640
Change-Id: I9e65dc903ce0e92da4f4a1e07fd5d6b66815e2a4
Reviewed-by: Sona Kurazyan <sona.kurazyan@qt.io>
(cherry picked from commit e910e445a4860467bc99e2bb446978fa790815dd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>